--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
               <div class="button number dot">.</div>
               <div class="button operation">%</div>
               <div class="button operation">/</div>
-              <div class="button last-entity-clear"> del </div>
-
+              <div data-functional="true" class="button MR">MR</div>
 
 
               <div class="button all-clear">C</div>
+              <div class="button last-entity-clear"> del </div>
+
               <div class="button equal">=</div>
 
 
